<resources>
    <string name="app_name">SWAT Mobile</string>
    <string name="action_settings">Settings</string>
    <string name="start_recording_button">Start recording</string>
    <string name="stop_recording_button">Stop recording</string>
    <string name="receiving_data_message">Receiving data...</string>
    <string name="preference_server_address">Server address</string>
    <string name="preference_server_port">Server port</string>
    <string name="preference_save">Save</string>

    <string name="default_server_address">192.168.0.20</string>
    <string name="default_server_port">25500</string>
</resources>
